--- a/package.json
+++ b/package.json
@@ -21,11 +21,27 @@
 		"eslint-plugin-svelte": "^2.30.0",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
+		"sass": "^1.66.1",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@types/jsdom": "^21.1.2",
+		"hastscript": "^8.0.0",
+		"jsdom": "^22.1.0",
+		"rehype-format": "^4.0.1",
+		"rehype-stringify": "^10.0.0",
+		"remark": "^14.0.3",
+		"remark-directive": "^2.0.1",
+		"remark-gfm": "^3.0.1",
+		"remark-parse": "^10.0.2",
+		"remark-rehype": "^10.1.0",
+		"unified": "^11.0.2",
+		"unist-util-inspect": "^8.0.0",
+		"unist-util-visit": "^5.0.0"
+	}
 }
