--- a/package.json
+++ b/package.json
@@ -32,13 +32,16 @@
 	"dependencies": {
 		"@types/cheerio": "^0.22.31",
 		"@types/jsdom": "^21.1.2",
+		"hast-util-to-html": "^9.0.0",
 		"hastscript": "^8.0.0",
 		"jsdom": "^22.1.0",
 		"rehype-format": "^4.0.1",
+		"rehype-katex": "^6.0.3",
 		"rehype-stringify": "^10.0.0",
 		"remark": "^14.0.3",
 		"remark-directive": "^2.0.1",
 		"remark-gfm": "^3.0.1",
+		"remark-math": "^5.1.1",
 		"remark-parse": "^10.0.2",
 		"remark-rehype": "^10.1.0",
 		"unified": "^11.0.2",
