--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"jsdom": "^22.1.0",
 		"rehype-format": "^4.0.1",
 		"rehype-katex": "^6.0.3",
+		"rehype-pretty-code": "^0.10.1",
 		"rehype-stringify": "^10.0.0",
 		"remark": "^14.0.3",
 		"remark-directive": "^2.0.1",
