--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@sveltejs/kit": "^1.20.4",
 		"@types/mdast": "^4.0.0",
 		"@types/unist": "^3.0.0",
+		"@types/yaml-front-matter": "^4.1.0",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"eslint": "^8.28.0",
@@ -49,6 +50,7 @@
 		"remark-rehype": "^10.1.0",
 		"unified": "^11.0.3",
 		"unist-util-inspect": "^8.0.0",
-		"unist-util-visit": "^5.0.0"
+		"unist-util-visit": "^5.0.0",
+		"yaml-front-matter": "^4.1.1"
 	}
 }
