--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
+		"postcss": "^8.4.29",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
 		"sass": "^1.66.1",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
+		"svelte-preprocess": "^5.0.4",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2"
@@ -36,20 +38,15 @@
 		"@types/cheerio": "^0.22.31",
 		"@types/jsdom": "^21.1.2",
 		"hast-util-to-html": "^9.0.0",
-		"hastscript": "^8.0.0",
-		"jsdom": "^22.1.0",
-		"rehype-format": "^4.0.1",
 		"rehype-katex": "^6.0.3",
 		"rehype-pretty-code": "^0.10.1",
 		"rehype-stringify": "^10.0.0",
-		"remark": "^14.0.3",
 		"remark-directive": "^2.0.1",
 		"remark-gfm": "^3.0.1",
 		"remark-math": "^5.1.1",
 		"remark-parse": "^10.0.2",
 		"remark-rehype": "^10.1.0",
 		"unified": "^11.0.3",
-		"unist-util-inspect": "^8.0.0",
 		"unist-util-visit": "^5.0.0",
 		"yaml-front-matter": "^4.1.1"
 	}
